--- a/gmi.1
+++ b/gmi.1
@@ -1,4 +1,4 @@
-.TH GMI 1 20210314\-0.6 Linux "User Manuals"
+.TH GMI 1 0.6.2 Linux "User Manuals"
 .SH NAME
 \fB\fCgmi\fR \- Gemini Capsule Generator
 .SH SYNOPSIS
