Removed useless configuration parameters.

--- a/gmi.1
+++ b/gmi.1
@@ -99,7 +99,7 @@ As as starting point, an empty configuration file can be found at \fB/etc/gmi/co
   Backup directory\. Defaults to \fB~/\.gmi/bak/\fR\.
 .
 .P
-\fBdate_format_articles\fR
+\fBdate_format_article\fR
 .
 .P
   Date format for articles\. Defaults to \fB%F\fR\.
@@ -117,7 +117,7 @@ As as starting point, an empty configuration file can be found at \fB/etc/gmi/co
   (Formatting is the same as \fBdate\fR command\.)
 .
 .P
-\fBarticles_section_delimiter\fR
+\fBarticle_section_delimiter\fR
 .
 .P
   Delimiter at the end of articles section\. Defaults to \fB\-\-\-\fR\.
